# src/controllers/author.controller.ts
@@ -3,6 +3,8 @@ import { authorService } from "../services/author.service";
 import { AuthorDTO } from "../dto/author.dto";
 import { Author } from "../models/author.model";
 import { CustomError } from "../middlewares/errorHandler";
+import {bookService} from "../services/book.service";
+import {BookDTO} from "../dto/book.dto";
 
 @Route("authors")
 @Tags("Authors")
@@ -58,5 +60,18 @@ export class AuthorController extends Controller {
         }
 
         return author;
+    }
+
+    // Récupère les livres de l'auteur par ID
+    @Get("{id}/books")
+    public async getAuthorBooksById(@Path() id: number): Promise<BookDTO[] | null> {
+        let author: Author | null = await authorService.getAuthorById(id);
+        if (!author) {
+            let error: CustomError = new Error("Author not found");
+            error.status = 404;
+            throw error;
+        }
+
+        return bookService.getBooksByAuthor(author);
     }
 }
